--- a/index.html
+++ b/index.html
@@ -29,13 +29,61 @@
 
     <section class="home">
        <div class="content">
-        <h3>Kuaför Malzemeleri İhtiyaçlarınız Burada</h3>
-        <p>Kuaför müsünüz? 
-            Evde kendinizi geliştirmek mi istiyorsunuz?
-            İstihdam sağlamak isteyen kurs musunuz? Aradığınız malzemeler burada.
+        <h3>Your Hairdresser Supplies Needs Are Here</h3>
+        <p>Are you a hairdresser? Do you want to improve yourself at home? Are you a course that wants to provide employment? The materials you are looking for are here.
         </p>
         <a href="#" class="btn"> Order Now</a>
        </div>
     </section>
+    <section class="menu">
+        <h1>Our <span>Categories</span></h1>
+        <div class="box-container">
+            <div class="box"> 
+                <div class="box-head">
+                    <img src="assets/images/haircaree.jfif" alt="Hair Care"/>
+                    <h3>Hair Care</h3>
+                </div>
+                <div class="box-bottom">
+                    <a href="#" class="btn">
+                        Check Out
+                    </a>
+                </div>
+            </div>
+            <div class="box"> 
+                <div class="box-head">
+                    <img src="assets/images/duzz.png" alt="Straighteners"/>
+                    <h3>Curling Irons and Straighteners</h3>
+                </div>
+                <div class="box-bottom">
+                    <a href="#" class="btn">
+                        Check Out
+                    </a>
+                </div>
+            </div>
+            <div class="box"> 
+                <div class="box-head">
+                    <img src="assets/images/brush.png" alt="Brushes"/>
+                    <h3>Brushes</h3>
+                </div>
+                <div class="box-bottom">
+                    <a href="#" class="btn">
+                        Check Out
+                    </a>
+                </div>
+            </div>
+            <div class="box"> 
+                <div class="box-head">
+                    <img src="assets/images/colors.jfif" alt="Hair Dyes"/>
+                    <h3>Box Dyes</h3>
+                </div>
+                <div class="box-bottom">
+                    <a href="#" class="btn">
+                        Check Out
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    
 </body>
 </html>
